--- a/.flowconfig
+++ b/.flowconfig
@@ -1,6 +1,11 @@
+# https://flowtype.org/docs/advanced-configuration.html
+
+[version]
+0.30.0
+
 [ignore]
 .*/node_modules/json5
 .*/node_modules/sb-event-kit
 
 [options]
-suppress_comment= \\(.\\|\n\\)*\\$FlowIgnore
+suppress_comment=\\(.\\|\n\\)*\\flow-disable-next-line
