--- a/package.json
+++ b/package.json
@@ -1,34 +1,50 @@
 {
   "name": "babel-starter",
-  "version": "2.0.0",
+  "version": "0.1.0",
   "description": ":rocket:",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server --port 8081 --config webpack.config.dev.js",
     "build": "webpack --config webpack.config.prod.js",
-    "dev": "webpack-dev-server --config webpack.config.dev.js",
-    "lint": "eslint src"
+    "test": "NODE_ENV=test nyc mocha-webpack --webpack-config webpack.config.test.js -r source-map-support/register -t 100000 'test/**/*.test.js' || true",
+    "test:watch": "nodemon --watch src --watch test --delay 2.5 --exec 'npm run test || true'",
+    "lint": "eslint src",
+    "flow": "flow status",
+    "flow:watch": "flow stop; nodemon --watch src --exec 'clear; flow status || true'"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AriaFallah/minimal-babel-starter.git"
+    "url": "git+https://github.com/nmaquet/minimal-babel-starter.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Nicolas Maquet",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/AriaFallah/minimal-babel-starter/issues"
+    "url": "https://github.com/nmaquet/minimal-babel-starter/issues"
   },
-  "homepage": "https://github.com/AriaFallah/minimal-babel-starter#readme",
+  "homepage": "https://github.com/nmaquet/minimal-babel-starter#readme",
   "devDependencies": {
     "babel-core": "^6.9.1",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
-    "babel-preset-aria": "^1.3.0",
+    "babel-plugin-transform-flow-strip-types": "^6.14.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "chai": "^3.5.0",
     "eslint": "^2.11.1",
-    "eslint-config-aria": "^4.0.0",
+    "eslint-config-airbnb": "^8.0.0",
+    "eslint-import-resolver-webpack": "^0.2.1",
+    "eslint-loader": "^1.3.0",
     "eslint-plugin-babel": "^3.2.0",
+    "eslint-plugin-import": "^1.6.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.4.1",
+    "flow-bin": "^0.33.0",
     "html-webpack-plugin": "^2.19.0",
+    "mocha": "^3.1.2",
+    "mocha-webpack": "^0.7.0",
+    "nodemon": "^1.11.0",
+    "source-map-support": "^0.4.5",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.16.2"
   }
 }
